--- a/symmetryinsat.tex
+++ b/symmetryinsat.tex
@@ -469,7 +469,7 @@ To answer the second question, the set of \textit{lex-leader} predicates for a p
 $$LL_g = \forall i : (\forall j < i : x_j = g.x_j) \Rightarrow  x_i \preceq g.x_i$$
 
 
-Each predicate is evaluated using the current assignment $\alpha$ used by the solver. 
+Each predicate is evaluated using the assignment $\alpha$ used by the solver. 
 If there exists symmetrical assignment g.$\alpha$ such that $g.\alpha < \alpha$, the predicated is evaluated to false and 
 to true otherwise.
 For example, let $\alpha_1 \alpha_2, \alpha_3$ the orbit of the permutation $g$ 
