--- a/defense/main.tex
+++ b/defense/main.tex
@@ -94,14 +94,14 @@
 \begin{frame}
 
 \frametitle{Motivation}
-SATisfiability is widely used in different domains
+Boolean SATisfiability is widely used in different domains
 
 \begin{itemize}
-	\item Artificial intelligence (planning, games, ...)
-	\item Bioinformatics (haplotype inference, ...)
-	\item Security (cryptanalysis, inversion attack on hash , ...)
-	\item Computationally hard problems (graph coloring, ...)
-	\item Formal methods (hardware model checking, ...)
+	\item Artificial intelligence (planning  ~\cite{planning_92}, ...)
+	\item Bioinformatics  (haplotype inference~\cite{biology_06}, ...)
+	\item Security (cryptanalysis~\cite{crypto_00}, ...)
+	\item Computationally hard problems (ramsey numbers, graph coloring, ...)
+	\item Formal methods,(bounded model checking~\cite{bmc_99}, ...)
 \end{itemize}
 
 \end{frame}
@@ -1181,7 +1181,7 @@ Orbit of an assignment $\alpha = G.\alpha = \{ g.\alpha \mid g \in G \}$
 	\draw[link] (rrr) -> node [mid] {$1$} (rrrr);
 	\end{tikzpicture}
 	\vfill
-\visible<2> {Add symmetry breaking predicates to prune the  search space.}
+%\visible<2> {Add symmetry breaking predicates to prune the  search space.}
 \end{frame}
  
 \begin{frame}
