--- a/preface.tex
+++ b/preface.tex
@@ -22,52 +22,58 @@
 \vspace*{\stretch{7}}
 %
 
-%\chapter*{Remerciements}
-%
-%Je souhaite en premier lieu remercier mes encadrants Fabrice Kordon, 
-%Soheib Barrir et Maximilien Colange qui m'ont accompagné durant ma thèse.
-%Les discussions que nous avons eu m'ont permis d'avancer dans mes travaux de recherches.
-%
-%Merci aux deux rapporteurs de ce travail, 
-%Laure Petrucci et Pascal Fontaine qui ont accepté de relire et évaluer ce manuscrit et également à 
-%tous les autres membres de mon jury Jean-Michel Couvreur, Emmanuelle Encrenaz et Bart Bogoerts.
-%
-%
-%Merci A Yann Thierry-Mieg pour toutes les discussions a propos des solveurs SAT et SMT et 
-%Julien Sopena  qui m'a fait découvrir le SAT durant mon stage de Master 1.
-%
-%
-%Je souhaite également remercier tous mes collègues des équipes Move, Delys et Whisper du LIP6 avec qui j'ai
-%pu partager 
-%
-%
-%
-%Damien Carver
-%Gauthier Voron
-%
-%Merci à mes co-bureau, Ludovic Le Frioux, Vincent Vallade 
-%
-%Ilays Toumililt
-%Redha Gouicem
-%Maxime Bittan
-%
-%Saalik Hatia
-%
-%Rémi Oudin
-%Marjorie Bournat
-%Denis Jeanneau
-%
-%Jonathan Sid-Otmane
-%
-%Lucas Serrano
-%Antoine Blin
-%
-%Francis Laniel
-%Florent Coriat
-%Arnaud Favier
-%
-%
-%
+\chapter*{Remerciements}
+
+Je souhaite en premier lieu remercier mes encadrants Fabrice Kordon, 
+Soheib Barrir qui m'ont accompagné durant ma thèse et également  Maximilien Colange
+qui m'a suivi la première année.
+Les discussions que nous avons eu m'ont permis d'avancer dans mes travaux de recherches.
+
+Merci aux deux rapporteurs de ce travail, 
+Laure Petrucci et Pascal Fontaine qui ont accepté de relire et évaluer ce manuscrit et également à 
+tous les autres membres de mon jury Jean-Michel Couvreur, Emmanuelle Encrenaz et Bart Bogoerts.
+
+
+Merci A Yann Thierry-Mieg pour toutes les discussions a propos des solveurs SAT et SMT et 
+Julien Sopena  qui m'a fait découvrir le SAT durant mon stage de Master 1.
+
+
+Je souhaite également remercier tous mes collègues des équipes Move, Delys et *Whisper* du LIP6.
+Et plus particulièrement Damien Carver, adepte des outils de visualisations et Gauthier Voron, 
+
+, avec qui j'ai partagé mes années de master et de thèse.
+
+
+Merci ensuite à mes co-bureau, Ludovic Le Frioux, ultime adversaire du Clash of Code,
+Vincent Vallade pour m'avoir fais connu le son ultime je me b*** et Rémi Oudin et également
+Mathieu Lehaut.
+
+Merci également à Ilays Toumililt
+
+
+
+Redha Gouicem
+Maxime Bittan
+
+Mathieu Lehaut
+Saalik Hatia
+
+
+Merci a Marjorie Bournat et Denis Jeanneau, qui ont réussi leur thèse sans caféine, 
+pour les pauses jeu de cartes.
+
+
+Jonathan Sid-Otmane
+
+Lucas Serrano
+Antoine Blin
+
+Francis Laniel
+Florent Coriat
+Arnaud Favier
+
+
+
 
 
 
