--- a/defense/main.tex
+++ b/defense/main.tex
@@ -64,14 +64,17 @@
     \begin{tabular}{ll}
  	    \textbf{Rapporteurs:} & \\
     	\textsc{Pascal \textsc{Fontaine}}  &  Maître de conférences, Université de Liège\\
-    	    	\vspace{1em}
+    	\vspace{1em}%
     	\textsc{Laure Petrucci}  & Professeur, Université Paris 13\\
     	
  	    \textbf{Reviewers:} & \\
+   		\textsc{Bart Bogaerts} & Assistant Professor, Vrije Universiteit Brussel\\
     	\textsc{Jean-Michel	Couvreur}  & Professeur, Université d'Orléans\\
-    	    	\vspace{1em}
+    	\vspace{1em}%
     	\textsc{Emmanuelle Encrenaz}  & Maître de conférences, Sorbonne Université\\
 
+
+		
     	
  	    \textbf{Directors:} & \\
     	\textsc{Souheib Baarir}  & Maître de conférences, Université Paris Nanterre\\
