--- a/title.tex
+++ b/title.tex
@@ -38,7 +38,7 @@
                           & \textsc{Laure Petrucci}  & Professeur, Université Paris 13\\
   \textit{Examinateurs :} & \textsc{Jean-Michel	Couvreur}  & Professeur, Université d'Orléans\\
                           & \textsc{Emmanuelle Encrenaz}  & Maître de conférences, Sorbonne Université\\
-                          & \textsc{Bart Bogoerts}  & Assistant Professor, Vrije Universiteit Brussel\\
+                          & \textsc{Bart Bogaerts}  & Assistant Professor, Vrije Universiteit Brussel\\
 \textit{Directeurs :}    & \textsc{Souheib Baarir}  & Maître de conférences, Université Paris Nanterre\\
                           & \textsc{Fabrice Kordon}  & Professeur, Sorbonne Université\\
 \end{tabular}\\
