--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -9,16 +9,17 @@ Before we get to the heart of the matter, we first introduce the Boolean satisfi
 \section{SAT basics}
 
 The goal of SAT is to determine whether a propositional formula is satisfiable (i.e. all constraints can be satisfied)
-or unsatisfiable (i.e. there us no way to satisfy all constraints at the same time).
+or unsatisfiable (i.e. there is no way to satisfy all constraints at the same time).
 The formula is constituted of \emph{Boolean} or \emph{propositional variables},
 i.e. each variable has two possible values: true or false (noted respectively $\true$ or $\false$).
 We call \emph{literal} a propositional variable or its negation.
 For a given variable $x$, the positive literal is represented by $x$ and the negative one by $\neg x$.
 Given a formula $\varphi$, we denote $\Vars_\varphi$ (respectively $\Lits_\varphi$) the set of variables (respectively literals) used in the formula (the index in $\Vars_\varphi$ and $\Lits_\varphi$ is usually omitted when
 clear from context).
-To build complex formulas, it is sufficient to use, $\neg, \lor$ and $\land$ which are respectively negation, disjunction and conjunction. The remaining operators like, $\Rightarrow, \Leftrightarrow$ and
-$\oplus, \cdots$ are expressed using combinations of the basic ones.
-For example, $a \Rightarrow b$, can be expressed by $ \neg a \lor b$.
+To build complex formulas, it is sufficient to use, $\neg, \lor$ and $\land$ which are respectively 
+the negation, disjunction and conjunction operators. The remaining operators like, $\Rightarrow, \Leftrightarrow$ and
+$\oplus, \cdots$ can be expressed using combinations of the basic ones.
+For example, $a \Rightarrow b$, can be expressed as $ \neg a \lor b$.
 Every binary operator adds a pair of parentheses to define explicitly the semantic of the formula.
 In the absence of parentheses, the following priority order applies (from the highest to the lowest priority):
 negation ($\neg$), conjunction ($\land$), disjunction ($\lor$).
@@ -27,13 +28,13 @@ An \emph{assignment}, noted $\alpha$, is defined as the function that assigns a 
  As usual, $\alpha$ is said \emph{total}, or \emph{complete}, when all elements of $\Vars$ have an image by
 $\alpha$, otherwise it is \emph{partial}. By abuse of notation, an assignment is
 often represented by the set of its true literals. For example, $\alpha = \{\neg x_1, x_3 \}$ means that $x_1$
-is set to the false value and $x_3$ is set to the true value.
+is set to false and $x_3$ is set to true.
   The set of all (possibly partial) assignments of $\Vars$ is noted $\Assignments(\Vars)$.
 A \emph{truth table} gives an evaluation of all possible assignments for a given formula.
 \Cref{tab:truthtable} shows the evaluation of the negation ($\neg$), the conjunction ($\land$), and the disjunction ($\lor$) operators.
 For convenience, the true value (\true) is also represented by $1$, and the false value (\false) is represented by $0$.
 When a formula is always true, independently from the assignment, it is called a \emph{tautology}: $x \lor \neg x$ is 
-an example of tautologous formula.
+an example of tautology.
 
 \begin{table}[!htbp]
  \centering
@@ -64,17 +65,17 @@ are defined in Definition~\ref{def:equiv} and Definition~\ref{def:logcons} respe
 
 \begin{definition}[Logical equivalence]\label{def:equiv}
  Two formulas $\varphi$ and $\psi$ are equivalent iff every assignment $\alpha$ that satisfies 
- formula $\varphi$  also models the formula $\psi$ and vice versa, denoted by $\varphi \equiv \psi$.
+ formula $\varphi$  also satisfies the formula $\psi$ and vice versa. It is denoted by $\varphi \equiv \psi$.
 \end{definition}
 
 
 \begin{definition}[Logical consequence]\label{def:logcons}
- A formula $\psi$ is a \emph{logical consequence} of a formula $\varphi$ if every model of $\varphi$
- is also a model of $\psi$ and is denoted by $\varphi \models \psi$.
+ A formula $\psi$ is a \emph{logical consequence} of a formula $\varphi$ if each assignment that satisfies $\varphi$
+  also satisfies $\psi$ and is denoted by $\varphi \models \psi$.
 \end{definition}
 
 \subsection{Normal forms}
-In Boolean logic, there are some particular form of formulae, called \emph{normal forms}.
+In Boolean logic, there are some particular forms of formulas, called \emph{normal forms}.
  To introduce some of them, we first need to present the concepts of \emph{cube} and \emph{clause}.
 \begin{definition}[Cube]
 A cube $\gamma$ is a finite conjunction of literals represented equivalently by:
@@ -91,25 +92,28 @@ With respect to its size, a clause is said to be \emph{unary, binary, ternary,} 
 Clauses have the following property that can be exploited to simplify the formula.
 When a clause $\omega_1$ is a subset of another clause $\omega_2$, noted $\omega_1 \subset \omega_2$,
 we say that $\omega_{1}$ subsumes $\omega_{2}$.
- And any assignment that satisfies $\omega_1$ will also satisfy $\omega_2$. So, $\omega_2$ is \emph{redundant} \textit{w.r.t.}  
- $\omega_{1}$ can be removed from the formula.
+ And any assignment that satisfies $\omega_1$ will also satisfy $\omega_2$. So, $\omega_2$ is \emph{redundant}
+  with respect to  $\omega_{1}$ and can be removed from the formula.
  
  
 \begin{definition}[Conjunctive Normal Form]
- The \emph{Conjunctive Normal Form} (CNF) of a formula is a finite conjunction of clauses represented by
+ The \emph{Conjunctive Normal Form} (CNF) of a formula is a finite conjunction of clauses. It can also be represented by
  $$\varphi = \bigwedge_{i=1}^k \omega_i \text{ (or by the set of its clauses } \varphi = \{\omega_i\}_{i \in \llbracket 1,k \rrbracket}\text{)}$$
 \end{definition}
 
  \begin{definition}[Disjunctive normal form]
-The \emph{Disjunctive normal form} (DNF) of a formula is finite disjunction of cubes represented by
+The \emph{Disjunctive normal form} (DNF) of a formula is finite disjunction of cubes.
+I can be also represented by
 $$\varphi = \bigvee_{i=1}^k \gamma_i$$
  \end{definition}
+
 
 The following table is a summary of the laws that allow to transform any formula to
 a normal form.
 
 \begin{table}[!htbp]
  \centering
+ \scriptsize
  \begin{tabular}{lllc}
   \multirow{2}{*}{Associativity laws} & $(x \lor y) \lor z \equiv x \lor (y \lor z)$\\
           & $(x \land y) \land z \equiv x \land (y \land z)$\\
@@ -140,12 +144,14 @@ a normal form.
  \caption{Set of laws of operators}
  \label{tab:laws}
 \end{table}
-Every formula can be transformed into a normal form with different complexity and the resulting formula is 
-satisfiability \emph{equivalent}.
+Every formula can be transformed into a \textit{logically equivalent} normal form.
 The Conjunctive normal form is the input form of state-of-the-art SAT solvers. Any propositional
-formula can be transformed in CNF form with polynomial time\cite{Russell1994ArtiCI}. Conversely, DNF form has
-an exponential memory complexity during the transformation\cite{darwiche2002knowledge}.
-Note that each cube in the problem in DNF form is a solution in the equivalent CNF formula.
+formula can be transformed in CNF form with polynomial time\cite{Russell1994ArtiCI}. 
+%Conversely, DNF form has
+%an exponential memory complexity during the transformation\cite{darwiche2002knowledge}.
+%Note that each cube in the problem in DNF form is a solution in the equivalent CNF formula.
+
+
 %\hakan{Sharp SAT = transform CNF to DNF}
 %A formula is said to be \emph{satisfiable} (\sat) if there is at least one assignment that satisfies it;
 %otherwise the formula is \emph{unsatisfiable} (\unsat).
@@ -187,12 +193,15 @@ Note that each cube in the problem in DNF form is a solution in the equivalent C
 The SAT problem is the first NP-complete problem proven by Stephen Cook in 1971~\cite{cook1971complexity}.
 NP-completeness means that a SAT problem can be solved with a non-deterministic Turing machine in polynomial time (NP) and is also NP-hard.
 A problem is said to be NP-hard (non-deterministic polynomial-time hard) if 
-any problem can be reduced to this problem in polynomial time.
-If someone finds an algorithm that solves a SAT with a polynomial time algorithm, this answer 
+any NP problem can be reduced to this problem in polynomial time.
+If someone finds an algorithm that solves SAT in polynomial time, this answer 
 one of the most important unsolved problems in theoretical computer science: the P versus NP problem,
  that is also one of the seven millennium prize problems~\cite{carlson2006millennium}.
+ 
+ 
+
 \subsection{Some easy to solve forms}
-Some particular instances of the SAT problem can be computed in polynomial time.
+Some particular instances of the SAT problem can be solved in polynomial time.
 
 \paragraph{2-SAT~\cite{aspvall1979linear}.}
 
@@ -227,20 +236,19 @@ There are three forms of Horn clauses:
 \item \emph{positive Horn clause} that contains only one positive literal and no negative literals
 \item \emph{negative Horn clause} that contains only negative literals.
 \end{itemize}
-To solve this particular form of formula, it suffices to  apply \emph{Boolean constraint propagation} (BCP) (or \emph{unit propagation}) explained in \cref{sec:dpll} until a fix point
-is reached.
-Roughly speaking, it satisfies all unit clauses in cascades. At the end of the procedure, either an empty clause is deduced and the problem
+To solve this particular form of formula, it suffices to  apply \emph{Boolean constraint propagation} (BCP) (or \emph{unit propagation}) explained in \cref{sec:dpll} until a fix point is reached.
+Roughly speaking, it satisfies all unit clauses in cascade. At the end of the procedure, either an empty clause is deduced and the problem
 is declared $\unsat$ or the fix point is reached and the formula is declared \sat.
  Like 2-SAT, this algorithm can also be computed in linear time complexity.
  
 \paragraph{XOR SAT\cite{moore2011nature}.} In this particular form, each clause contains the xor ($\oplus$) operator rather than or ($\lor$).
 This problem can be seen as a system of linear equations. Gaussian elimination is an algorithm that allows to solve this kind of
-problem is polynomial time, more exactly in $O(n^3)$.
+problem in polynomial time, more exactly in $O(n^3)$.
 
 \subsection{Some related problems}
-A different kind of problems are related to SAT.
-One of them is sharp-SAT (\#SAT)~\cite{valiant1979complexity}, its purpose is to count the number of satisfiable assignments in a formula.
-Another related problem is \textit{maximum satisfiability problem} (MAX-SAT)~\cite{biere2009handbook}. In this case, the problem
+Different kinds of problems are related to SAT.
+One of them is sharp-SAT (\#SAT)~\cite{valiant1979complexity}. Its purpose is to count the number of satisfiable assignments in a formula.
+Another related problem is the \textit{maximum satisfiability problem} (MAX-SAT)~\cite{biere2009handbook}. In this case, the problem
 is to find the maximum subset of clauses that can be satisfied for a formula. Different variants
 of this problem exist. For example, some constraints must be satisfied (hard clauses) and MAX-SAT
 is applied on the remaining clauses called \emph{soft} clauses.
@@ -249,59 +257,64 @@ $\forall$ are present in the formula. For example, $\forall x\, \exists y\, \exi
 This particular form is a generalization of the SAT problem with PSPACE complexity~\cite{garey2002computers}.
 
 
-\clearpage
 \section{Solving a SAT problem}
 
 \subsection{Algorithm}
 
 Two kinds of algorithms exist to solve satisfiability problems.
-First, the \emph{incomplete} algorithms~\cite{kautz2009incomplete} which do not provide any guarantee that they will eventually report
+First, \emph{incomplete} algorithms~\cite{kautz2009incomplete} which do not provide any guarantee that they will eventually report
 either a satisfiable assignment or declare the formula unsatisfiable. This kind of algorithm is out of scope of this thesis. 
 Second, the \emph{complete} algorithms, which provide a guarantee that if an assignment exists,
-it will be found or declare that formula is unsatisfiable.
-This section describes different \emph{complete} algorithm to solve a propositional formula.
+it will be found or declare that the formula is unsatisfiable.
+This section describes different \emph{complete} algorithms to solve propositional formulas.
+
 \subsubsection{A naive algorithm}
 A naive approach to solve a SAT problem is to try all possible assignments.
 For a propositional formula with $n$ variables, we have to verify, in the worse case, $2^n$ assignments.  
 The algorithm first tries an assignment, for example all literals are set to false and then if
 the formula is not satisfiable, it tries other assignments. 
 This algorithm is finished when either a satisfiable assignment is found and so
-the formula is declared $\sat$  or all assignments are not satisfying the formula and so the formula is declared $\unsat$.
+the formula is declared $\sat$  or no assignment is satisfying the formula and so the formula is declared $\unsat$.
 \Cref{fig:naive_algo} illustrates the search tree for a given problem with six variables.
 The  formula presented in the figure has 6 clauses, with 2 ternary clauses and 4 binary clauses.
 %It will be used as an example in different algorithm presented below. 
 This formula is $\sat$, the assignment $\alpha_{11} = \{\neg x_1, \neg x_2, x_3, \neg x_4, x_5, \neg x_6 \}$ is a solution of the problem.
-A naive algorithm will check 10 assignments before finding the solution. 
+A naive algorithm might check 10 assignments before finding the solution. 
 In the general case, due to the number of variables in problems, this algorithm will be intractable.
+
+
 \begin{figure}[!htbp]
  \centering
  \input{fig/naive_algorithm.tex}
  \caption{All possible assignments for a problem with 6 variables}
  \label{fig:naive_algo}
 \end{figure}
+
 \subsubsection{Davis Putnam Logemann Loveland algorithm (DPLL)}\label{sec:dpll}
 One of the first, non-memory-intensive, algorithm developed to solve SAT problems is 
 the Davis Putnam Logemann Loveland algorithm (DPLL)~\cite{dpll_62}. 
 It explores a binary tree using depth first search, as shown in \Cref{algo:dpll}.
-The construction of the tree  relies on a \emph{decision} variable  that is chosen on \cref{algo:dpll:decision}.
+The construction of the tree  relies  on the unit propagation (\cref{algo:dpll:unit}) presented in detail in \Cref{algo:unitdpll} and on a \emph{decision} variable  that is chosen on \cref{algo:dpll:decision}.
 Both values of this variable are checked, the true value on \cref{algo:dpll:pos} and the false value on \cref{algo:dpll:neg}.
-When a leaf of the tree is inconsistent (i.e. a variable needs to be set to true and false at the same time), called a \textit{conflict}
- (\cref{algo:dpll:unsatbranch}), the opposite value of the decision is explored.
-Recursively, when both values of a variable reach a conflict,
+When a leaf of the tree is inconsistent (i.e. a variable needs to be set to true and false at the same time), called a \textit{conflict} (\cref{algo:dpll:unsatbranch}), the opposite value of the decision is explored.
+Recursively, when both values of a variable lead to a conflict,
 the solver \emph{backtracks} one level (\emph{chronological backtracking}), i.e. tries the opposite value of 
 the previous decision.
 When the top of the tree is reached and a conflict occurs, it means that the formula cannot be satisfied and the 
 solver reports $\unsat$ (\cref{algo:dpll:unsat}). However, if the formula is empty in any branch, 
 this means that the current assignment satisfies the whole formula and the algorithm reports it on \cref{algo:dpll:sat1}
 or \ref{algo:dpll:sat2}.
+
+\clearpage
+
 \input{algo/dpll}
-An important function in the DPLL algorithm is the Boolean constraint propagation (BCP) also called unit propagation
-is presented in (\cref{algo:dpll:unit}).
-This function forces the values of unit clauses in order to satisfy them
-until a fix point is reached and will end either, there
-are no more unit clauses in the formula or an inconsistency 
-is found this means that the current assignment cannot satisfy the formula. 
-In the later case, the solver will backtrack and another branch will be explored.
+
+An important function in the DPLL algorithm is the Boolean constraint propagation (BCP) also called unit propagation 
+(\Cref{algo:unitdpll})
+This function set the values of unit clauses in order to satisfy them. It is applied until a fix point is reached: 
+either there are no more unit clauses in the formula or an inconsistency is found.
+The second case means that the current assignment cannot satisfy the formula and the
+solver needs to backtrack to explore another branch.
 
 \input{algo/unitdpll}
 
@@ -310,7 +323,7 @@ $\neg x_1$ and $\neg x_2$, unit propagation detects that $x_3$ must be assigned 
 This propagation prevents to explore non-interesting assignments. Actually, when $x_3$ is set to false,
 the clause $\omega_1$ cannot be satisfied and as it remains 3 variables and so $2^3$ possible assignments
 (from $\alpha_1$ to $\alpha_8$). These assignments will never be checked.
-The performance of the DPLL algorithm is highly impacted by the decision variable chosen.
+The performance of the DPLL algorithm is highly impacted by the choice of decision variable.
 \texttt{assignDecisionLiteral} is the procedure responsible of choosing it.
 Its objective is to find a literal that will generate a maximum of unit propagations.
 Intuitively, decision literals can be viewed as “guesses” and propagated literals can be viewed as “deductions”. 
@@ -325,8 +338,8 @@ Different heuristics exists to choose the decision variable, some of them are pr
 %On consequence, all clauses that own these literals are satisfied and so can be removed.
 %
 \subsubsection{Conflict Driven Clause Learning (CDCL) algorithm}\label{sec:cdcl}
-The principal weakness of DPLL algorithm is to make the same inconsistencies several times
-(principally due to chronological backtracking), leading to  unnecessary CPU usage.
+The principal weakness of the  DPLL algorithm is to discover the same inconsistencies several times
+(principally due to chronological backtracking and absence of learning), leading to  unnecessary CPU usage.
 Conflict Driven Clause Learning (CDCL) \cite{marques1999grasp} is a sound and complete algorithm
 that overcomes this weakness.
 \Cref{algo:cdcl} gives an overview of CDCL, like DPLL,  it walks on a binary search tree.
@@ -338,8 +351,9 @@ An inconsistency or a \emph{conflict} at level zero indicates that the formula i
 reports it (from \cref{alg:cdcl:unsat_start} to \cref{alg:cdcl:unsat_end}). When the conflict is occurring at a higher level,
  its reason is analyzed and a clause called \emph{conflict clause} is deduced (\cref{alg:cdcl:analyze}).
 The work done in this procedure will be explained thereafter.
-This clause is \emph{learnt} (\cref{alg:cdcl:learn}) (added to the formula). This clause is redundant w.r.t the current
-formula, and so it does not change the satisfiability of $\varphi$. It also avoids encountering a conflict with the same
+This clause is \emph{learnt} (\cref{alg:cdcl:learn}) (added to the formula). This clause is redundant with respect 
+to the current formula, and so it does not change the satisfiability of $\varphi$.
+ It also avoids encountering a conflict with the same
 causes in the future. %This is the key difference with the DPLL algorithm.
 The analysis is completed by the computation of a \emph{backjumps level}, the assignment and decision level are updated (\cref{alg:cdcl:backjump}).
  As the level can be much lower than the current level, this is called \emph{non-chronological backtracking} or \textit{backjump}.
@@ -347,13 +361,14 @@ Finally, if no conflict appears, the algorithm chooses a new decision literal
 (\cref{alg:cdcl:pick_start,alg:cdcl:pick_end}).
 The above steps are repeated until the satisfiability status of the formula is determined.
 
+\clearpage
 \input{algo/cdcl}
 
 
 
 \subsection{Conflict Analysis}
 A conflict is an inconsistency discovered by the solver, a situation that requires for a variable to be set 
-simultaneously to the true and false values. \Cref{fig:conflict} shows an example that leads to a conflict.
+simultaneously to the true and false. \Cref{fig:conflict} shows an example that leads to a conflict.
 First, the solver chooses $\neg x_1$ as a decision (noted D ($\neg x_1$) in the figure) then, $\neg x_6$ and, then $\neg x_5$. This last one propagates $x_4$ (marked with P ($x_4$) in the figure),
 which in turn propagates $x_2$ and $x_3$.
 To satisfy $\omega_1$, $x_3$ needs to be set to $\true$, and  to satisfy $\omega_5$, 
@@ -366,12 +381,14 @@ it needs to be set to $\false$. As a variable cannot have both values, a conflic
  \label{fig:conflict}
 \end{figure}
 
-Applied another time, this series of decisions would provoke the same propagation and lead to the same conflict. 
+\clearpage
+
+Applied another time, this serie of decisions would provoke the same propagation and lead to the same conflict. 
 To escape this situation, one needs to analyze the situation and feed the algorithm with the information that prevents it to do the 
 same mistake again. This is done by use of the so-called \emph{implication graph}.
 %the solver needs to analyze the reason of the conflict with 
 It represents the current state of the solver and records all dependencies between  variables. It is updated when a variable is assigned 
-(on decision/propagation), or unassigned (on backjumping operation). The implication graph is a directed acyclic graph (DAG) in which a vertex represents an assigned variable labeled by $\mathit{l@dl(l)}$ where $l$ represents assigned literal and $\mathit{dl(l)}$ represents the decision level of the literal $l$.
+(on decision/propagation), or unassigned (on backjumping operation). The implication graph is a directed acyclic graph (DAG) in which a vertex represents an assigned variable labeled by $\mathit{l@dl(l)}$ where $l$ represents the assigned literal and $\mathit{dl(l)}$ represents the decision level of the literal $l$.
 Root vertices that have no incoming edges represent decision literals. The remaining vertices represent
 propagations.
 Each incoming arc, labeled by a clause, represents the \emph{reason} of this propagation.
@@ -385,9 +402,9 @@ This clause must be \textit{assertive} (i.e. all  literals are false except one 
  \label{fig:implication-graph}
 \end{figure}
 
-\texttt{analyzeConflict} procedure analyzes this graph to find the reason of the conflict. To do that, a search of a
+The \texttt{analyzeConflict} procedure analyzes this graph to find the reason of the conflict. To do that, a search of a
 \emph{unique implication point (UIP)} is performed. A UIP of the last decision level of the implication graph is a variable
-which lies on every path from the decision to the conflict. Note that, there are many UIPs for a given decision level.
+which lies on every path from the decision to the conflict. Note that there might be many UIPs for a given decision level.
 In such a case, UIPs are ordered according to the distance with the contradiction. The First UIP (FUIP) is the closest to
 the conflict. It is well known that the FUIP provides the smallest set of assignment that is responsible for the
 contradiction~\cite{zhang2001efficient}.
@@ -400,7 +417,7 @@ literals that have an ongoing arc to the  cut that contains the UIP. In \Cref{fi
 learned clause will be $\omega_l = \{x_1, \neg x_4 \}$. Since the information of this clause is redundant regarding 
 the original formula, it can be added without any  restriction. The conflict clause can be simplified
 using the implication graph to reduce its size (by detecting redundancies~\cite{sorensson2009minimizing}).
- All learned clauses are stored in a clauses database.
+ All learned clauses are stored in a clause database.
  
 The \texttt{backjumpAndRestartPolicies} procedure is executed after producing the conflict clause.
 All variables from the highest decision level to the current decision level are unassigned and so 
@@ -409,7 +426,7 @@ If a conflict implies only one level, the decision variable must be assigned
 to the opposite value at level 0. This means that this literal must be true without any decision.
 Adding the conflict clause prunes the search space that obviously contains no solution.
 This is the key point of the CDCL algorithm and the big difference with the DPLL algorithm.
- In our example \Cref{fig:implication-graph}, the target decision level is 1 because the 
+ In our example on \Cref{fig:implication-graph}, the target decision level is 1 because the 
  highest decision level different that the current one constructed in the conflict clause is 1.
 After backtracking, the conflict clause will be assertive and the FUIP is the only variable that has
 not a value and so will be propagated in the next step of the algorithm. In our example, at the decision level 1 the
@@ -421,7 +438,8 @@ the false value .
 \subsection{Heuristics}\label{sec:heuristics}
 
 \paragraph{Decision heuristics.}
- The decision variable has a huge impact on the 
+ The choice of the 
+ decision variable has a huge impact on the 
 overall solving time. It influences the number of propagations and so 
 the depth of the search tree.
  The Variable State Independent Decaying Sum (VSIDS)~\cite{moskewicz2001chaff} measure is one of the most famous decision heuristics and is used
@@ -449,18 +467,18 @@ Theoretically, a solver with restarts has a better result~\cite{huang2007effect}
 used in almost all state-of-the-art solvers.
 
 \paragraph{Cleaning clause database.}
-Storing  all learned clauses will end up by a memory issue and the cost of unit propagation will increase.
+Storing  all learned clauses will end up with memory exhaustion and the cost of unit propagation will increase.
  So, the solver needs to develop a policy to eliminate some of them. These clauses are redundant with regards to the initial 
  problem, removing them will not affect the satisfiability of the formula.
   In the literature, different criteria exist.
  The size of the clause is one of them and is very often used by solvers. 
- A small clause has better chance to participate to the unit propagation and so be useful for the solving.
+ A small clause has a better chance to participate to the unit propagation and so be useful for the solving.
  As a consequence, large clauses are removed.\\
 \emph{Clause activity} is another criterion, a clause augments its activity when it participates to conflict analysis. 
-Clauses with lower activity that are not implied in the resolution of conflicts are removed.
+Clauses with a lower activity that are not implied in the resolution of conflicts are removed.
  The last, often, used criterion is based on the Literal Block Distance (LBD) measure. It is a measure that computes the \emph{quality} of a clause.
 It is based on the number of decision levels present in the clause. The more a clause has a high value of LBD and 
-the weaker its quality is, and so will be deleted from the clause database.
+the weaker its quality is, and so it will be deleted from the clause database.
  
 In current state-of-the-art solvers, multiple criteria are used and half of the learned clauses are removed during the clause database cleaning process.
 
@@ -477,14 +495,14 @@ the \emph{resolvent} as it results from solving two clauses on the literal $x_1$
 %no more application of the resolution are possible (satisfiable formula). This is a complete algorithm to solve a SAT problem.
 %Its major issue is to explicitly generate all resolvent and can be exponential in CNF size.
 %Hence, the memory of the computer will be limiting factor.
-\emph{The subsumption} aims at removing  clauses. Consider two clauses $\omega_1$ and $\omega_2$, such that
+\emph{Subsumption} aims at removing  clauses. Consider two clauses $\omega_1$ and $\omega_2$, such that
 $\omega_1 \subset  \omega_2$, then $\omega_2$ can be safely removed from the original formula.
 \emph{Self subsuming resolution} uses resolution rules and subsumption. at the same time,
 the resolvent clause subsumes the original one. For example, $\omega_1 = \{x_1, \neg x_2\}$ and $\omega_2 = \{x_1, x_2, x_3\}$,
  then the resolvent clause will be $\omega_3 = \{x_1, x_3\}$ which subsumes $\omega_2$. This principle
 is implemented in the \texttt{SatElite}~\cite{een2005effective} preprocessor engine and is used in almost all modern SAT solvers.
 
-Other simplification techniques exist such that \emph{Gaussian elimination} which detects a sub formula in a XOR-SAT
+Other simplification techniques exist such as \emph{Gaussian elimination} which detects a sub formula in a XOR-SAT
 form and solves it in a polynomial time~\cite{moore2011nature}. This technique can also be used in inprocessing~\cite{soos2010enhanced}. 
 Some techniques exploit the structure of the original formula and add relevant clauses to speed up the resolution
 time of the SAT solver. One of them uses the \textit{community structure} of the formula to find good clauses to add into.
@@ -496,12 +514,12 @@ of a SAT problem is the exploitation of these cores. %Actually, SAT problems are
 \emph{Portfolio}, first introduced in \emph{ManySAT}~\cite{hamadi2008manysat}, is a technique that launches several SAT solvers in parallel with different heuristics (decisions, restarts, ...) that 
 communicates or not between them. When one of them finds a solution or finds that none exists, the overall computation is finished.
 Another technique to develop a parallel SAT solver is called \emph{divide and conquer}. In this technique,
-the search space is divided  dynamically and submitted to different solvers that cooperate to find a solution and used in
-different solvers like, for example~\cite{chu2008pminisat, lewis2007multithreaded}.
+the search space is divided  dynamically and submitted to different solvers that cooperate to find a solution.
+This is used in different solvers like, for example~\cite{chu2008pminisat, lewis2007multithreaded}.
  Some specific techniques like load balancing and work stealing is applied to avoid a solver to be idle.
 A recent framework \emph{PaInleSS} (a Framework for Parallel SAT Solving) can be used to easily create a new parallel 
 SAT solver with different heuristics~\cite{le2017painless}~\cite{le2019modular}. 
-Another way to optimize the solving time of SAT solver is the exploitation of symmetries. The rest of this manuscript will 
+Another way to optimize the solving time of SAT solvers is the exploitation of symmetries. The rest of this manuscript will 
 detail how this allows to improve the performance of SAT solvers in the presence of symmetries in the original formula.
 %Authors of this framework win the parallel tracks of SAT competition \footnote{\url{http://www.satcompetition.org/}} in 2018.
 %\begin{center}
