--- a/symmetryinsat.tex
+++ b/symmetryinsat.tex
@@ -1,8 +1,8 @@
 \chapter{Symmetry and SAT}\label{chap:symmetryinsat}
 \minitoc
-Despite the NP-Completeness character of the SAT problem, state-of-the-art solvers are able to treat many industrial problems.
-This is mainly due to the capacity of SAT solvers to prune search space using, for instance, learnt clauses.
-Another way to accelerate the solving is the exploitation of symmetries.
+Despite the NP-Completeness character of the SAT problem, state-of-the-art solvers are able to handle many industrial problems.
+This is mainly due to the capacity of SAT solvers to prune the search space using, for instance, learnt clauses.
+Another way to accelerate solving is the exploitation of symmetries.
 These are common in real life. \\
 Consider the problem of searching for a pattern in butterfly wings.
 Most butterflies have an identical pair of wings. After checking that both wings are symmetric
@@ -49,7 +49,7 @@ b & = & b * e & \\
 
 The structure $\langle G, * \rangle$ is denoted simply $G$ when clear from the context that G is a group
 with a binary operation. In this thesis, we only consider \emph{finite} groups, i.e. groups with a finite number of elements.
-\clearpage
+
 \begin{definition}[Subgroup]
 Given a group $G$, a \emph{subgroup} is a non-empty subset of $G$ which is also a group with 
 the same binary operation. We denote $H \leq G$, the subgroup $H$ of $G$.
@@ -69,11 +69,12 @@ A group has at least two subgroups:
 \end{definition}
 In other words, to obtain the group, it is sufficient to compose all permutations in the generators set until a fix point.
 So the generators are a compact representation of a group.
+
 \subsection{Permutation group}
 \begin{definition}[Permutation]
  A \emph{permutation} is a bijection from a set $X$ to itself.
 \end{definition}
-Example: given a set $X = \{x_1, x_2, x_3, x_4, x_5, x_6\}$,
+Example: given a set $X = \{x_1, x_2, x_3, x_4, x_5, x_6\}$, consider
 \begin{center}
 $g = ${\Bigg( \begin{tabular}{cccccc}
   $x_1$ & $x_2$ & $x_3$ & $x_4$ & $x_5$ & $x_6$\\
@@ -86,6 +87,9 @@ So the permutation in cycle notation will be
 \begin{center}
  $g$ = ($x_1 \enskip x_2 \enskip x_3$) ($x_5 \enskip x_6$)
 \end{center}
+
+\clearpage
+
 \begin{definition}[Support of a permutation]
  The \emph{support} of the permutation $g$, noted $\support_{g}$, is the set of elements that are not mapped to themselves:
  \begin{center}
@@ -99,7 +103,8 @@ So the permutation in cycle notation will be
  
 %\hakan{mettre ailleurs A clause $\omega$ is \emph{stabilized} by a permutation $g$ if $\omega \cap \support_g = \emptyset$.}
 \begin{definition}[Permutation Group]
- A set of permutations of a given set $X$ form a group $G_X$ with the composition operation ($\circ$) called \emph{permutation group}.
+ A set of permutations of a given set $X$ form a group $G_X$ with the composition operation ($\circ$).
+ This group is called \emph{permutation group}.
 \end{definition}
 \begin{definition}[Symmetric Group]
 The set of \textbf{all} permutations of a set $X$ is the \emph{symmetric group} of $X$ and is noted \Group($X$).
@@ -130,7 +135,7 @@ The group $\Group(\Vars)$ acts on  assignments (possibly partial) of $\Vars$ as 
 % \item $g$  commutes with the negation: $g.\neg l  = \neg (g.l)$
 %\end{itemize}
 The set of symmetries of $\varphi$ is noted $G_{\varphi}$ and is a subgroup of $\Group(\Vars)$.
-Symmetry of a formula $\varphi$ preserves the satisfaction, for every \emph{complete} assignment $\alpha$:
+The symmetry of a formula $\varphi$ preserves the satisfaction, for every \emph{complete} assignment $\alpha$:
 \begin{center}
  $\alpha \models \varphi\Leftrightarrow g.\alpha \models \varphi$
 \end{center}
@@ -233,7 +238,7 @@ $m$ clauses and $n$ variables, the graph is constructed as follows~\cite{biere20
  \begin{minipage}[l]{.75\textwidth}
   \includegraphics[width=4.3in]{cnfs/graph_cnf_no_opt-crop}
  \end{minipage}
- \caption{Example of constructed symmetry graph for a given CNF}
+ \caption{Example of the constructed symmetry graph for a given CNF}
  \label{fig:graph_no_opt}
 \end{figure}
 \Cref{fig:graph_no_opt} shows the graph representation of a CNF. This problem has 6 variables and 11
@@ -260,7 +265,7 @@ To ensure that the permutation is valid, the following condition must be satisfi
 $$\forall x \in \support_g, g.\neg x == \neg g.x$$
 
 In other words, we check if the image of the negation of $x$ is equals to the negation of the image of $x$,
-or each element $x$ in the support of the permutation.
+for each element $x$ in the support of the permutation.
 This optimization reduces considerably the size of the 
 graph, and accelerates the symmetry detection.
 In the previous example, we can remove 9 nodes and 9 edges. More generally,
@@ -287,7 +292,7 @@ we can remove from the graph as many nodes and edges as there are binary clauses
   \label{fig:graph_opt}
 \end{figure}
 
-After the construction of such a graph, it is given to an automorphism tool which will produce its set of generators.
+After its construction, the graph is given to an automorphism tool. This tool  will produce its set of generators.
 With the previous graph, the following generators are obtained using $\bliss$ as the automorphism tool:
 \begin{center}
  \begin{minipage}[c]{.635\textwidth}
@@ -381,11 +386,11 @@ The search algorithm explores
 fruitlessly the symmetric search space, i.e. tries all possible combinations of couples (pigeon, hole).
 Solving this problem with a standard SAT solver, like MiniSAT~\cite{een2003extensible},
  turns out to be very time consuming (and even impossible, in a reasonable time, for high values of $n$). 
-To avoid this combinatorial explosion, a technique called \emph{symmetry breaking} allows a SAT solver to avoid the visit of symmetric search space. For this purpose, there are two principles , known as \emph{static symmetry breaking}
+To avoid this combinatorial explosion, a technique called \emph{symmetry breaking} allows a SAT solver to avoid the visit of symmetric search space. For this purpose, there are two principles, known as \emph{static symmetry breaking}
 and \emph{dynamic symmetry breaking}. In the general case, visiting one assignment for each orbit is sufficient to determine the satisfiability of the whole formula.
-In the first case, symmetry breaking constraints that invalidate symmetric assignments are added to the initial problem before the start of solving (statically). The second one alters
-the search space during the solving (dynamically), it will like in the static approach prune symmetric search space or it can accelerate tree traversal using symmetrical facts.
-In fact, some decisions will be transformed into propagations and so accelerate the overall solving time.
+In the first case, symmetry breaking constraints that invalidate symmetric assignments are added to the initial problem before the start of solving (statically). The second one alters the search space during the solving (dynamically).
+The solver uses symmetries (present in the formula) to remove symmetric assignments or uses it to propagate symmetrical facts.
+%In fact, some decisions will be transformed into propagations and so accelerate the overall solving time.
   
 In the following sections, we present in detail the two principles.
 
@@ -408,11 +413,13 @@ In the following sections, we present in detail the two principles.
 This section explains how to statically exploit symmetrical properties of a SAT problem.
 In this approach, only one assignment (branch) from each orbit is visited and all others are
 omitted.% to deduce the satisfiability of the formula by adding constraints.
-This leads us to the following questions:
+ This leads us to the following questions:
 \begin{enumerate}
  \item How  to choose a branch that is equivalent to all symmetric ones?
  \item How to generate constraints that forbid symmetrical assignments?
 \end{enumerate}
+
+\clearpage
 To answer question 1, we need to introduce an ordering relation between assignments
 
 \begin{definition}[Assignments ordering]\label{def:assignment_ordering}%
@@ -465,12 +472,13 @@ order is a total order.
 %
 %the goal of the constraints called \textit{symmetry breaking predicates} (sbps), that answer the second question, is to be true for the lex-leader of each equivalence class.
 
-To answer the second question, the set of \textit{lex-leader} predicates for a permutation $g \in G_\varphi$ is defined as:
+To answer the second question, the set of \textit{lex-leader} predicates 
+ for a permutation $g \in G_\varphi$ is defined as:
 $$LL_g = \forall i : (\forall j < i : x_j = g.x_j) \Rightarrow  x_i \preceq g.x_i$$
 
 
 Each predicate is evaluated using the assignment $\alpha$ used by the solver. 
-If there exists symmetrical assignment g.$\alpha$ such that $g.\alpha < \alpha$, the predicated is evaluated to false and 
+If there exists symmetrical assignment g.$\alpha$ such that $g.\alpha < \alpha$, the predicate is evaluated to false and 
 to true otherwise.
 For example, let $\alpha_1 \alpha_2, \alpha_3$ the orbit of the permutation $g$ 
 (g maps $\alpha_1 \rightarrow \alpha_2 \rightarrow \alpha_3 \rightarrow \alpha_1$) and $\alpha_2$ is the lex-leader 
@@ -493,12 +501,12 @@ according to the ordering relation, so the predicate is evaluated to true only b
 %\hakan{REVOIR}
 %In other words, each assignment that has a variable such that its image under $g$ is smaller according to the ordering relation $\prec$, is eliminated from the search space by $LL_g$.
 
-The conjunction of $LL_g$, for all permutations  $g \in G_{\varphi} $ produces a sound and complete set of symmetry breaking predicates (sbps) also called \emph{full symmetry breaking}.
-In this case, only the lex-leader assignment will be visited for each orbit.
+The conjunction of $LL_g$, for all permutations  $g \in G_{\varphi} $ produces a sound and complete set of symmetry breaking predicates (sbps).
+In this case, only the lex-leader assignment is visited for each orbit. This approach is called \emph{full symmetry breaking}.
 However, the size of the \textit{sbps} can be exponential in the number of variables of the problem and so, they cannot be totally computed.
 To overcome this problem, only a subgroup is considered, in this case the
-conjunction of $LL_g$ for $H \subset G_{\varphi}$ (such that $g$ is a permutation of the subgroup) results a set of symmetry breaking predicates 
-that aims at visiting at least one assignment per orbit and is called \emph{partial symmetry breaking}.
+conjunction of $LL_g$ for $H \subset G_{\varphi}$ (such that $g$ is a permutation of the subgroup) produces
+ a set of symmetry breaking predicates that aims at visiting at least one assignment for each orbit. This approach is is called \emph{partial symmetry breaking}.
 In this situation, several assignments per orbit can be visited but often bring a considerable reduction of the
 search space. Partial symmetry breaking gives a good trade-off between the number of generated constraints and the reduction of the search space.
 In the partial and full symmetry breaking, the set of symmetry breaking predicates generated is denoted by $\psi$.
@@ -522,9 +530,9 @@ In the partial and full symmetry breaking, the set of symmetry breaking predicat
 %in some $G \subseteq G_{\varphi} $ results a sound and complete symmetry breaking predicates
 %but not necessarily \emph{complete} symmetry breaking predicates for $G_{\varphi}$ noted $\psi$.
 
-\begin{theorem}[Satisfiability preservation SBPs]
+\begin{theorem}[Satisfiability preservation sbps]
  \label{theorem:satisfiability_preservation_SBPs}
- Let $\varphi$ be a formula and $\psi$ the computed \textit{SBPs} for the set of symmetries in $G_{\varphi}$: 
+ Let $\varphi$ be a formula and $\psi$ be the computed \textit{sbps} for the set of symmetries in $G_{\varphi}$: 
  $$\varphi~and ~\varphi \wedge \psi \text{ are equi-satisfiable}.$$
 \end{theorem}
 
@@ -532,7 +540,7 @@ In the partial and full symmetry breaking, the set of symmetry breaking predicat
  If $\varphi \wedge \psi$ is SAT then $\varphi$ is trivially SAT. If
  $\varphi$ is SAT, then there is some assignment $\beta$ that satisfies $\varphi$.
  Without loss of generality, $\beta$ can be chosen to be the lex-leader of its
- orbit under $G_{\varphi}$. Thus, $g$ does not contradict $\beta$, which implies that
+ orbit under $G_{\varphi}$. Thus, sbps do not contradict $\beta$, which implies that
  $\beta \models \psi$.
 \end{proof}
 
@@ -581,7 +589,7 @@ The following clauses encode a compact lex-leader for a permutation:
 \end{tabular}
 \end{center}
 where $\{y_0,\cdots, y_{n} \}$ is the set of auxiliary variables, $y_0$ is a unit clause that encodes the first equality and $\{x_1,...,x_n\}$ is the set of variables sorted with the lexicographic order.
-\Cref{fig:esbp_compact_gen} shows the compact encoding of generated constraints. This form grows linearly w.r.t. the number of variables.
+\Cref{fig:esbp_compact_gen} shows the compact encoding of the generated constraints. This form grows linearly with respect to the number of variables.
 The auxiliary variables that encode the equality of two literals provide this reduction. 
 Three auxiliary variables are introduced in this example $x_7,\ x_8,\ x_9$ such that $x_7$ encodes the equality of $x_1$ and $x_4$, $x_8$ encodes the equality of $x_2$ and $x_5$, and $x_9$ encodes the equality of $x_3$ and $x_6$.
 
@@ -636,7 +644,7 @@ Actual symmetries can be eliminated by the addition
 of only a linear number of symmetry-breaking constraints~\cite{flener2002breaking}. 
 To ensure this linear number of constraints, one condition must be satisfied :
 the lexicographic order of variables needs to respect the structure of the matrix.
-In practice, automorphism tools give only  set of generators that contains no information on
+In practice, automorphism tools give only the set of generators that contains no information on
 the structure of the group. 
 The authors of $\breakid$~\cite{devriendt2016improved} developed an algorithm to detect this specific 
 structure and exploit it.
@@ -676,7 +684,7 @@ It uses the size of the orbit and occurrences of variables in the set of generat
 the biggest orbit produces more binary clauses and variables with few occurrences allow to disable less generators.
 
 \subsubsection{BreakID}
-As a summary, $\breakid$ combines three ideas: i) It investigates whether the generators produced by the automorphism tool have the row interchangeability special form  and exploit it if so;
+To summarize $\breakid$ combines three ideas: i) It investigates whether the generators produced by the automorphism tool have the row interchangeability special form  and exploit it if so;
 ii) It generates a maximum number of binary lex-leader constraints; iii) It generates the classical \textit{sbps}.
 
 %The exploitation of symmetries statically is called \emph{static symmetry breaking}.
@@ -749,9 +757,12 @@ Roughly speaking, all variables in the same orbit are assigned/unassigned at the
 of the orbit can be checked once. In this approach, only the number of true and false literal matters
 and computing the number of possible valuations is trivial in this particular 
 form of group. For example, consider the permutations: $g_1 = (x_1\, x_2)$,
-only one of the valuations $F T$ (variable $x_1$ assigned the false value and variable $x_2$ assigned the true value) or the reverse assignment ($T F$) is possible.
- So, one true value and one false value must be checked in addition to the 
-$F F$ and $T T$ assignments to determine the satisfiability of the formula.
+there are 4 possible valuations $F F$, $T T$, $F T$ and $T F$, where the first letter is the valuation of $x_1$
+and the second is the valuation for $x_2$. As $F T$ and $T F$ have the same number of true and false, only
+one of them needs to be explored.
+%only one of the valuations $F T$ (variable $x_1$ assigned the false value and variable $x_2$ assigned the true value) or the reverse assignment ($T F$) might be explored.
+% So, one true value and one false value must be checked in addition to the 
+%$F F$ and $T T$ assignments to determine the satisfiability of the formula.
  The order in which the valuations are checked has a tremendous impact on solver performance. 
 This approach has good results when the group of symmetries presents a particular form.
 In the general case, when we consider any group, computing the number of possible valuations will be very difficult and this approach is not applicable.
@@ -760,14 +771,14 @@ In the general case, when we consider any group, computing the number of possibl
 A different approach can be used to accelerate the tree traversal using symmetrical facts during the solving.
 One of them is \emph{symmetry propagation} (SP)~\cite{Devriendt12}.
 The general idea of this approach is to propagate symmetrical literals of those already propagated.
-In other words, it accelerates the tree traversal by ``transforming some guess (decisions) into deductions (propagations)''.
+In other words, it accelerates the tree traversal by ``transforming some guesses (decisions) into deductions (propagations)''.
 %Indeed, the problem that presents symmetries makes possible to deduce some value 
 %for the variables that would be guessed if symmetry properties were ignored.
 These deductions will reduce the overall tree traversal depth and hence will eventually accelerate the solving process. To explain this approach, let us first give some definitions.
 \begin{definition}[Logical consequence]
  \label{def:logical_consequence}
- A formula $\phi$ is a logical consequence of a formula $\varphi$ denoted by $\varphi \models \phi$, if for any assignment
- $\alpha$ satisfying $\varphi$, also satisfies $\phi$. Two formulas are \emph{logically equivalent} if each is a logical
+ A formula $\phi$ is a logical consequence of a formula $\varphi$ denoted by $\varphi \models \phi$, if any assignment
+ $\alpha$ satisfying $\varphi$ also satisfies $\phi$. Two formulas are \emph{logically equivalent} if each is a logical
  consequence of the other.
 \end{definition}
 
@@ -784,12 +795,12 @@ also propagate the symmetric of $l$. The problem here is to determinate which sy
 $\varphi \cup \alpha$.
 \begin{definition}[Active symmetry]
  \label{def:active_symmetry}
- A symmetry $g$ is called active under a partial assignment $\alpha$ $\text{if } g.\alpha = \alpha$
+ A symmetry $g$ is called active under a partial assignment $\alpha$ $\text{if } g.\alpha = \alpha.$
 \end{definition}
 Definition~\ref{def:active_symmetry} leads to the following proposition:
 \begin{proposition}
  \label{prop:active_symmetry}
- Let $\varphi$ a formula and $\alpha$ a partial assignment. Let $g$ be a symmetry of $\varphi$,
+ Let $\varphi$ be a formula and $\alpha$ a partial assignment. Let $g$ be a symmetry of $\varphi$,
  if $g$ is active under the assignment $\alpha$, then $g$ is also a symmetry of $\varphi \cup \alpha$.
 \end{proposition}
 The previous proposition states that an active symmetry $g$ for a partial assignment $\alpha$ is still valid for
@@ -840,7 +851,7 @@ The overall performance of the symmetry propagation is intrinsically related to 
 %Another approach to exploit symmetry without removing any satisfiable assignment of the problem
 %is \emph{Symmetry Explanation Learning}~\cite{devriendt2017symmetric} (SEL). 
 
-All learned clauses are logical consequences of the problem and the symmetric of these clauses are also valid and 
+All learned clauses are logical consequences of the problem and the symmetric of these clauses are also relevant and 
 can be added to the formula without restrictions. Symmetry learning scheme (SLS)~\cite{benhamou2010enhancing} 
 adds the symmetric clauses when they are learnt. This solution could add duplicate clause and create a memory overhead. Moreover, the deletion policy of learnt clause could remove clauses before they are effectively used.
 To alleviate these drawbacks, Symmetry Explanation Learning (SEL)~\cite{devriendt2017symmetric} adds symmetrical clauses
@@ -886,8 +897,9 @@ Nonetheless, the negative point is that SEL may flood the solver if the used set
 
 \subsubsection{Conclusion} 
 Dynamic symmetry breaking approaches exploit the symmetry property of the formula during the solving.
-It prevents the creation, as in static symmetry breaking, of potentially useless clause that increases the size of the original formula.
-Different approaches exist, one uses k-branching that allows to visit only lex-leader assignment but can be applied only in particular form group.
+It avoids the creation, as in static symmetry breaking, of potentially useless clauses that increase
+the size of the original formula.
+Different approaches exist, one uses k-branching that allows to visit only lex-leader assignment but can be applied only in groups of particular form.
 Others use the symmetry to propagate symmetrical facts.
 Mainly, they transform decisions (guesses) into propagations (deductions), that accelerate the tree traversal and may improve the overall performance of the solver. 
 Moreover, as they are integrated directly to the search engine, solvers can adapt their heuristics dynamically, like for
