--- a/algo/cdcl_cosy.tex
+++ b/algo/cdcl_cosy.tex
@@ -16,7 +16,7 @@
 	\DontPrintSemicolon
 	
 	\Fn{\CDCL{$\varphi$: CNF formula, {\color{red}\C: symmetry controller}}
-		\textbf{returns} $\true$ if $\varphi$ is \sat and $\false$ otherwise}
+		\textbf{returns} $\true$ if $\varphi$ is $\sat$ and $\false$ otherwise}
 	{
 		$dl \gets 0$ \tcp*{Current decision level}
 		$\alpha \gets \emptyset$\;
